test_nginx.yaml
apiVersion: apps/v1beta2
kind: Deployment
metadata:
  name: test-nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: test-nginx
  template:
    metadata:
      labels:
        app: test-nginx
    spec:
      containers:
      - name: test-nginx
        image: digibert/test-nginx
        ports:
        - containerPort: 80

---

apiVersion: v1
kind: Service
metadata:
  name: test-nginx
spec:
  type: NodePort
  ports:
  - port: 8080
    targetPort: 80
  selector:
    app: test-nginx
